More bib entries

--- a/artrefs.bib
+++ b/artrefs.bib
@@ -4,7 +4,7 @@
 
 @Book{anisch_nonlin_eff,
   title = {Нелинейные эффекты в хаотических и стохастических системах},
-  author = {Анищенко, В. С. and  Астахов, В. В. and  Вадивасова, Т. Е. and  Нейман, А. Б. and  Стрелкова, Г. И. and Шиманский-Гайер, Л.},
+  author = {Анищенко, В. С. and Астахов, В. В. and Вадивасова, Т. Е. and Нейман, А. Б. and Стрелкова, Г. И. and Шиманский-Гайер, Л.},
   location = {Москва-Ижевск},
   publisher = {Институт компьютерных исследований},
   year = {2003},
@@ -33,7 +33,7 @@
   year = {2011},
   language = {russian},
   pagetotal = {320},
-  annote = {diffur, attractors, cycles, bifurk, Ressler, Lorenz, Chua, Duffing, Sprott, ......}
+  annote = {diffur, attractors, cycles, bifurk, Ressler, Lorenz, Chua, Duffing, Sprott, .}
 }
 
 @Book{magni_new_meth,
@@ -77,6 +77,56 @@
   language = {russian},
   pagetotal = {288},
   annote = {informaition}
+}
+
+@Book{prigogine_selforganization,
+  title = {Самоорганизация в неравновесных системах},
+  author = {Николис, Г. and Пригожин, И.},
+  location = {М.},
+  publisher = {Мир},
+  year = {1979},
+  language = {russian},
+  pagetotal = {512}
+}
+
+@Book{prigogine_order_from_chaos,
+  title = {Порядок из хаоса: Новый диалог человека с природой},
+  author = {Пригожин, И. and Стенгерс, И.},
+  location = {М.},
+  publisher = {Прогресс},
+  year = {1986},
+  language = {russian},
+  pagetotal = {432}
+}
+
+@Book{prigogine_from_existent,
+  title = {От существующего к возникающему. Время и сложность в физических науках},
+  author = {Пригожин, И.},
+  location = {М.},
+  publisher = {Наука},
+  year = {1985},
+  language = {russian},
+  pagetotal = {328}
+}
+
+@Book{andronov_vitt_haikin,
+  title = {Теория колебаний},
+  author = {Андронов, А. А. and Витт, А. А. and  Хайкин, С. Э.},
+  location = {М.},
+  publisher = {Физ-мат литература},
+  year = {1959},
+  language = {russian},
+  pagetotal = {916}
+}
+
+@Book{vigner_invar,
+  title = {Инвариантность и законы сохранения},
+  author = {Вигнер, Е.},
+  location = {М.},
+  publisher = {Едиториал УРСС},
+  year = {2002},
+  language = {russian},
+  pagetotal = {320}
 }
 
 @Book{karabutov_adapt_id_sys,
@@ -350,7 +400,7 @@
 
 @Book{rastr_intro,
   author = "Растригин, Л. А.",
-  title = "Введение  в  идентификацию объектов управления",
+  title = "Введение в идентификацию объектов управления",
   address = "М.",
   publisher = "Энергия",
   year = 1977,
@@ -627,8 +677,8 @@
 }
 
 @Book{alex_adop_sys_au,
-  author = " Александровский, Н. M. and Егоров, С. B. and Кузин,  Р. Е.",
-  title = "Адаптивные системы автоматического управления сложными  технологическими  процессами",
+  author = "Александровский, Н. M. and Егоров, С. B. and Кузин, Р. Е.",
+  title = "Адаптивные системы автоматического управления сложными технологическими процессами",
   address = "М.",
   publisher = "Энергия",
   year = 1973,
@@ -647,8 +697,8 @@
 }
 
 @Book{vukobr_nonadopt,
-  author = "Вукобратович, М. and  Cтокич, Д. and  Кирченски, Н.",
-  title = "Неадаптивное  и адаптивное управление манипуляционными работами",
+  author = "Вукобратович, М. and Cтокич, Д. and Кирченски, Н.",
+  title = "Неадаптивное и адаптивное управление манипуляционными работами",
   address = "М.",
   publisher = "Мир",
   year = 1989,
@@ -657,7 +707,7 @@
 }
 
 @Book{kubik_nlsc,
-  author = "Гельднер, Г. and  Кубик, С.",
+  author = "Гельднер, Г. and Кубик, С.",
   title = "Нелинейные системы управления",
   address = "М.",
   publisher = "Мир",
@@ -668,7 +718,7 @@
 
 @Book{gladkov_optim_nongrad,
   author = "Гладков, Д. И.",
-  title = "Оптимизация  систем  неградиентным  случайным поиском",
+  title = "Оптимизация систем неградиентным случайным поиском",
   address = "М.",
   publisher = "Энергоэтомиздат",
   year = 1984,
@@ -677,8 +727,8 @@
 }
 
 @Book{gromico_autoajust_sys,
-  author = "Громыко, В. Д. and  Санковский, Е. А.",
-  title = "Самонастраивающиеся  системы с моделью",
+  author = "Громыко, В. Д. and Санковский, Е. А.",
+  title = "Самонастраивающиеся системы с моделью",
   address = "М.",
   publisher = "Энергия",
   year = 1974,
@@ -698,7 +748,7 @@
 
 @Book{deith_method_id_ds,
   author = "Дейч, А. M.",
-  title = "Методы идентификации  динамических  объектов",
+  title = "Методы идентификации динамических объектов",
   address = "M.",
   publisher = "Энергия",
   year = 1979,
@@ -718,7 +768,7 @@
 
 @Book{ivah_ag_autolearn_sys,
   author = "Ивахненко, А. Г.",
-  title = "Самообучающиеся  системы  распознавания  и автоматического управления",
+  title = "Самообучающиеся системы распознавания и автоматического управления",
   address = "Киев",
   publisher = "Технiка",
   year = 1969,
@@ -757,10 +807,10 @@
 }
 
 @Book{kuncevich_syntez_opt_ad,
-  author = "Кунцевич, В. М. and  Лычак, М. М.",
+  author = "Кунцевич, В. М. and Лычак, М. М.",
   title = "Синтез оптимальных и адаптивных систем управления",
   address = "Киев",
-  publisher = "Наукова  думка",
+  publisher = "Наукова думка",
   year = 1985,
   numpages = 248,
   language = "russian"
@@ -778,7 +828,7 @@
 
 @Book{lung_id_sys,
   author = "Льюнг, Л.",
-  title = "Идентификация систем. Теория  для  пользователя",
+  title = "Идентификация систем. Теория для пользователя",
   address = "М.",
   publisher = "Наука",
   year = 1991,
@@ -788,7 +838,7 @@
 
 @Book{max_method_tech_ob,
   author = "Макс, Ж.",
-  title = "Mетоды и техника обработки сигналов при  физических измерениях: В 2-х томах",
+  title = "Mетоды и техника обработки сигналов при физических измерениях: В 2-х томах",
   address = "M.",
   publisher = "Мир",
   year = 1983,
@@ -798,7 +848,7 @@
 
 @Book{merkova_rand_stat,
   author = "Маркова, Е. В. and Маслак, А. А.",
-  title = "Рандомизация  и  статистический вывод",
+  title = "Рандомизация и статистический вывод",
   address = "М.",
   publisher = "Финансы и статистика",
   year = 1986,
@@ -817,7 +867,7 @@
 }
 
 @Book{seidg_id_su,
-  author = "Сейдж, Э. П. and Мэлса, Дж.Л.",
+  author = "Сейдж, Э. П. and Мэлса, Дж. Л.",
   title = "Идентификация систем управления",
   address = "M.",
   publisher = "Наука",
@@ -828,7 +878,7 @@
 
 @Book{silver_id_opt_as,
   author = "Сильвестров, А. Н. and Чинаев, П. И.",
-  title = "Идентификация и  оптимизация автоматических систем",
+  title = "Идентификация и оптимизация автоматических систем",
   address = "M.",
   publisher = "Наука",
   year = 1974,
@@ -858,7 +908,7 @@
 
 @Book{feldbaum_osn_theor_opt,
   author = "Фельдбаум, А. А.",
-  title = "Основы теории  оптимальных  автоматических систем",
+  title = "Основы теории оптимальных автоматических систем",
   address = "M.",
   publisher = "Наука",
   year = 1966,
@@ -867,7 +917,7 @@
 }
 
 @Book{fomin_adopt_ctrl,
-  author = "Фомин, В. Н. and Фрадков, А. Л.  and Якубович, В. А.",
+  author = "Фомин, В. Н. and Фрадков, А. Л. and Якубович, В. А.",
   title = "Адаптивное управление динамическими объектами",
   address = "M.",
   publisher = "Наука",
@@ -878,7 +928,7 @@
 
 @Book{cipkin_adopt_learn,
   author = "Цыпкин, Я. З.",
-  title = "Адаптация и обучение в автоматических  системах",
+  title = "Адаптация и обучение в автоматических системах",
   address = "M.",
   publisher = "Mир",
   year = 1975,
@@ -897,7 +947,7 @@
 }
 
 @Book{pupkov_func_series,
-  author = "Пупков, К. А. and Капалин, В.И.  and Ющенко, А. С.",
+  author = "Пупков, К. А. and Капалин, В. И. and Ющенко, А. С.",
   title = "Функциональные ряды в теории нелинейных систем",
   address = "М.",
   publisher = "Наука",
@@ -918,7 +968,7 @@
 
 @Book{bodyan_osn_theor_ann,
   author = "Бодянский, Е. В. and Руденко, О. Г.",
-  title = "Основы  теории  искусственных  нейронных сетей",
+  title = "Основы теории искусственных нейронных сетей",
   address = "Харьков",
   publisher = "ТЕЛЕТЕХ",
   year = 2002,
@@ -927,7 +977,7 @@
 }
 
 @Book{vstovks_elem_info_phys,
-  author = "Встовский, Г В",
+  author = "Встовский, Г. В.",
   title = "Элементы информационной физики",
   address = "М.",
   publisher = "МГИУ",
@@ -937,7 +987,7 @@
 }
 
 @Book{kostyuk_ad_sy_id,
-  author = "Кику, А Г and Костюк, В И and Краскевич, В Е and Сильвестров, А Н and Шпит, С В",
+  author = "Кику, А. Г. and Костюк, В. И. and Краскевич, В. Е. and Сильвестров, А. Н. and Шпит, С. В.",
   title = "Адаптивные системы идентификации",
   address = "Киев",
   publisher = "Техніка",
@@ -1010,7 +1060,7 @@
 @Article{atu_vinn2001,
   author = "Михалёв, А. И. and Гуда, А. И.",
   title = "Синтез и адаптация параметров поисковых методов идентификации нелинейных систем",
-  journal = "Тези доповідей шостої міжнародної науково-технічної конференції.  м. Вінниця, 8-12 жовтня 2001 р",
+  journal = "Тези доповідей шостої міжнародної науково-технічної конференції. м. Вінниця, 8-12 жовтня 2001 р",
   year = 2001,
   pages = {253},
   language = "russian"
@@ -1030,7 +1080,7 @@
 @Article{atu_vinn2003_a,
   author = "Зворикін, В. Б. and Гуда, А. И.",
   title = "Особливості роботи контуру позиціювання",
-  journal = "Тези доповідей сьомої міжнародної науково-технічної конференції.  м. Вінниця, 8-11 жовтня 2003 р",
+  journal = "Тези доповідей сьомої міжнародної науково-технічної конференції. м. Вінниця, 8-11 жовтня 2003 р",
   year = 2003,
   pages = {124},
   language = "russian"
@@ -1039,7 +1089,7 @@
 @Article{atu_vinn2003_b,
   author = "Зинченко, М. Д. and Михалёв, А. И. and Гуда, А. И.",
   title = "Идентификация нелинейных параметров систем управления нажимными винтами блюминга",
-  journal = "Тези доповідей сьомої міжнародної науково-технічної конференції.  м. Вінниця, 8-11 жовтня 2003 р",
+  journal = "Тези доповідей сьомої міжнародної науково-технічної конференції. м. Вінниця, 8-11 жовтня 2003 р",
   year = 2003,
   pages = {132},
   language = "russian"
@@ -1048,7 +1098,7 @@
 
 @Article{mai_opt_proc,
   author = "Михалев, А. И. and Иванов, Л. Ф. and Швачич, Г. Г.",
-  title = "Автоматизация процесса  определения  динамических  характеристик средств измерения",
+  title = "Автоматизация процесса определения динамических характеристик средств измерения",
   journal = {Приборы и методы автоматизации экспериментальных исследований: Сб. научн. тр.},
   address = "Днепропетровск",
   publisher = "ДГУ",
@@ -1059,10 +1109,10 @@
 
 @Article{anisimov_method_curr_parm,
   author = "Анисимов, А. С.",
-  title = "Метод текущей параметрической  идентификации",
+  title = "Метод текущей параметрической идентификации",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1989,
   number = 12,
   pages = {3--9},
@@ -1074,7 +1124,7 @@
   title = "О сходимости адаптивного метода прямого поиска экстремума",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1985,
   number = 13,
   pages = {78--86},
@@ -1083,7 +1133,7 @@
 
 @Article{ivanov_alg_id_dyn_hyst,
   author = "Иванов, А. И.",
-  title = "Алгоритмы идентификации динамических  объектов с гистерезисом",
+  title = "Алгоритмы идентификации динамических объектов с гистерезисом",
   journal = {Деп.в ВИНИТИ 22.11.84, N 7925-84},
   address = "М.",
   publisher = "",
@@ -1097,7 +1147,7 @@
   title = "Адаптивный алгоритм поиска экстремума",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1976,
   number = 4,
   pages = {84--89},
@@ -1106,10 +1156,10 @@
 
 @Article{ivanov_stoh_alg_int,
   author = "Иванов, Л. Ф. and Левенец, И. Г.",
-  title = "Стохастический  алгоритм  интегрального метода адаптивного поиска экстремума мультимодального критерия",
+  title = "Стохастический алгоритм интегрального метода адаптивного поиска экстремума мультимодального критерия",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1984,
   number = 13,
   pages = {46--52},
@@ -1121,7 +1171,7 @@
   title = "Адаптивный метод прямого поиска экстремума функции",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1983,
   number = 11,
   pages = {16--25},
@@ -1130,10 +1180,10 @@
 
 @Article{mai_akt_meth_sear,
   author = "Ивахненко, М. М. and Михалев, А. И.",
-  title = "Активный  метод  поисковой идентификации многопараметрического объекта  с  неполной  наблюдаемостью",
+  title = "Активный метод поисковой идентификации многопараметрического объекта с неполной наблюдаемостью",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1980,
   number = 8,
   pages = {21--33},
@@ -1142,10 +1192,10 @@
 
 @Article{mai_sear_meth_akt,
   author = "Ивахненко, М. М. and Михалев, А. И.",
-  title = "Поисковый  метод  активной идентификации систем с перекрестными связями",
+  title = "Поисковый метод активной идентификации систем с перекрестными связями",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1981,
   number = 9,
   pages = {61--76},
@@ -1155,7 +1205,7 @@
 @Article{mai_akt_id_robot,
   author = "Ивахненко, М. М. and Михалев, А. И. and Тихонов, В. Л.",
   title = "Активная идентификация робототехнических систем",
-  journal = {Идентификация,  автоматический контроль и моделирование сложных процессов и  объектов  управления:  Сб. науч. тр.},
+  journal = {Идентификация, автоматический контроль и моделирование сложных процессов и объектов управления: Сб. науч. тр.},
   address = "Днепропетровск",
   publisher = "ДГУ",
   year = 1983,
@@ -1168,7 +1218,7 @@
   title = "Оценка ошибки идентификации нестационарных объектов",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1974,
   number = 2,
   pages = {13--17},
@@ -1178,7 +1228,7 @@
 @Article{ivah_alg_id_parm,
   author = "Ивахненко, M. M. and Корсун, В. И.",
   title = "Алгоритм идентификации параметров объектов управления",
-  journal = {Некоторые вопросы динамики и  управления движением: Сб. науч. тр.},
+  journal = {Некоторые вопросы динамики и управления движением: Сб. науч. тр.},
   address = "Киев",
   publisher = "Наукова думка",
   year = 1976,
@@ -1187,8 +1237,8 @@
 }
 
 @Article{mai_sear_meth_akt_id_ns,
-  author = "Ивахненко, M. M. and  Михалев, А. И.",
-  title = "Поисковый  метод  активной идентификации нестационарных систем",
+  author = "Ивахненко, M. M. and Михалев, А. И.",
+  title = "Поисковый метод активной идентификации нестационарных систем",
   journal = {Тез. докл. на Втором Всесоюз. симпозиуме <<Теория нестационарных систем управления>>},
   address = "25- 26 сент. Севастополь",
   year = 1979,
@@ -1201,7 +1251,7 @@
   title = "Интегральный метод прямого поиска глобального экстремума",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1980,
   number = 8,
   pages = {54--63},
@@ -1211,7 +1261,7 @@
 @Article{mai_iss_dyn_isp,
   author = "Михалев, А. И. and Карабутов, Н. Н. and Барвинов, В. П.",
   title = "Исследование динамики испытательных стендов объемных шарниров",
-  journal = "Тез.докл. II Всесоюз. науч.-техн. конф. <<Микропроцессорные системы  автоматики>>",
+  journal = "Тез.докл. II Всесоюз. науч.-техн. конф. <<Микропроцессорные системы автоматики>>",
   address = "Новосибирск",
   publisher = "НЭТИ",
   year = 1990,
@@ -1221,10 +1271,10 @@
 
 @Article{mai_syntez_adop_id,
   author = "Карабутов, И. Н. and Михалев, А. И.",
-  title = "Синтез адаптивных  идентификаторов состояния нестационарных динамических  систем",
+  title = "Синтез адаптивных идентификаторов состояния нестационарных динамических систем",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1992,
   number = 19,
   pages = {26--43},
@@ -1236,7 +1286,7 @@
   title = "Исследование адаптивных алгоритмов управления с эталонной моделью",
   journal = asau,
   address = "Киев",
-  publisher = "Респ. межвед.  науч.-техн.  сб.",
+  publisher = "Респ. межвед. науч.-техн. сб.",
   year = 1984,
   number = 12,
   pages = {35--41},
@@ -1244,9 +1294,9 @@
 }
 
 @Article{andronn_id_ns_hyst,
-  author = "Andronikov, A. M. and  Bekey, G. A. and Hadaegh, F. Y.",
+  author = "Andronikov, A. M. and Bekey, G. A. and Hadaegh, F. Y.",
   title = "Identifiability of Nonlinean sistems with hysteretic elements",
-  journal = {Trans. of the  ASME},
+  journal = {Trans. of the ASME},
   year = 1983,
   number = 105,
   pages = {209--214},
@@ -1255,8 +1305,8 @@
 
 @Article{medved_nepar_alg_id_nds,
   author = "Медведев, А. В.",
-  title = "Непараметрические  алгоритмы  идентификации  нелинейных динамических  систем",
-  journal = "Стохастические   системы   управления",
+  title = "Непараметрические алгоритмы идентификации нелинейных динамических систем",
+  journal = "Стохастические системы управления",
   address = "Новосибирск",
   publisher = "Наука",
   year = 1979,
@@ -1265,8 +1315,8 @@
 }
 
 @Article{chen_nn_for_nls_mod,
-  author = "Chen, S. and  Billings, A.",
-  title = "Neural networks for  nonlinear  system  modelling and identification",
+  author = "Chen, S. and Billings, A.",
+  title = "Neural networks for nonlinear system modelling and identification",
   journal = "Advances in Intelligent Control",
   address = "London",
   publisher = "Taylor and Francis",
@@ -1276,9 +1326,9 @@
 }
 
 @Article{chen_nls_id_radial_basis,
-  author = "Chen, S. and  Billings, A. and Cowan, C. F. ",
-  title = "Non-linear  system identification using radial basis function",
-  journal = "Int.  J.  Syst.  Sci.",
+  author = "Chen, S. and Billings, A. and Cowan, C. F. ",
+  title = "Non-linear system identification using radial basis function",
+  journal = "Int. J. Syst. Sci.",
   publisher = "Taylor and Francis",
   number = 12,
   year = 1990,
@@ -1288,8 +1338,8 @@
 
 @Article{patra_nds_id_cheb,
   author = "Patra, J. C. and Kot, A. C.",
-  title = "Nonlinear  dynamic  system  identification  using Chebyshev functional link artificial neural network",
-  journal = "IEEE Trans.  on System, Man and Cybernetics - Part B",
+  title = "Nonlinear dynamic system identification using Chebyshev functional link artificial neural network",
+  journal = "IEEE Trans. on System, Man and Cybernetics - Part B",
   number = 4,
   year = 2002,
   pages = {505--511},
@@ -1298,8 +1348,8 @@
 
 @Article{narendra_id_ctl_ds_nn,
   author = "Narendra, K. S. and Parthasarathy, K.",
-  title = "Identification and control of  dynamic systems using neural networks",
-  journal = "IEEE Trans.  on  Neural  Networks",
+  title = "Identification and control of dynamic systems using neural networks",
+  journal = "IEEE Trans. on Neural Networks",
   number = 1,
   year = 1990,
   pages = {4--26},
@@ -1318,7 +1368,7 @@
 
 
 @Article{spinul_opt_act_id,
-  author = "Бойкова, В. О. and  Мирунко, В. М. and Сільвестров, А. М. and Спінул, Л. Ю.",
+  author = "Бойкова, В. О. and Мирунко, В. М. and Сільвестров, А. М. and Спінул, Л. Ю.",
   title = "Оптимизация режимов активной идентификации динамических объектов",
   journal = "Адаптивные системы автоматического управления",
   number = {8(28)},
@@ -1329,7 +1379,7 @@
 
 @Article{bodyan_adapt_viyavl,
   author = "Бодянский, Є. В. and Міхальов, О. І. and Плісс, І. П.",
-  title = "Адаптивне   виявлення розладнань в  об`єктах  керування  за  допомогою  нейронних  мереж",
+  title = "Адаптивне виявлення розладнань в об`єктах керування за допомогою нейронних мереж",
   journal = "Системні технології",
   year = 2000,
   numpages = {505--511},
@@ -1357,7 +1407,7 @@
 }
 
 @Article{zadeh_id_1956,
-  author = {Zadeh, L. A},
+  author = {Zadeh, L. A.},
   title = "On the Identification Problem",
   journal = "IRE Transactions on Circuit Theory",
   year = 1956,
@@ -1369,7 +1419,7 @@
 
 
 @Article{gummel_poon_1970,
-  author = {H. K. Gummel and H. C. Poon},
+  author = {Gummel, H. K. and Poon, H. C.},
   title = "An integral charge control model of bipolar transistors",
   journal = "Bell Syst. Tech. J.",
   year = 1970,
@@ -1380,7 +1430,7 @@
 
 @Book{shiskin_electronnie_pribori,
   title = {Электронные приборы},
-  author = {В. Н. Дулин and Н. А. Аваев  and В. П. Демин  and Ю. Е. Наумов  and А. З. Струков  and Г. Г. Шишкин},
+  author = {Дулин, В. Н. and Аваев, Н. А. and Демин, В. П. and Наумов, Ю. Е. and Струков, А. З. and Шишкин, Г. Г.},
   location = {М.:},
   publisher = {Энергоатомиздат},
   year = {1989},
