--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -279,9 +279,9 @@
 \paragraph{Публікації}
 
 По темі дисертації опубліковано
-49 друкована праця,
+50 друкована праця,
 з них
-24 входять до до міжнародних наукометрічних баз,
+24 входять до міжнародних наукометрічних баз,
 13 статей опубліковано у матеріалах конференцій.
 
 
