--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -1,8 +1,41 @@
 \chapter{Обзор состояния проблемы и постановка задачи исследования}
 
-Когда обратили внимание на сдх.
+Современный уровень науки и технологий характеризуется
+широким использованием нелинейных динамических
+систем~\cite{andronov_vitt_haikin,anisch_nonlin_eff,mishenko_du_small_relax,nonlin_vibro}.
+При этом нелинейные эффекта присущи как объектам,
+так и системам управления~\cite{kubik_nlsc,vukobr_nonadopt}. Динамика нелинейных систем,
+характеризуется общим уровнем сложности моделей,
+в большинстве случаев не допускающего
+точного аналитического представления.
+Помимо этого, был обнаружен, и в последнее время представляет
+постоянный интерес для исследователей класс систем,
+проявляющих хаотическую динамику~\cite{moon_chaotic_vibr,magni_theory_dyn_chaos,kuznetsov_dyn_chaos,neimark_stoch_chaos_vibro}.
+Для таких систем, вследствие чувствительности к начальным условиям
+и параметрам, характерным свойством является наличие ограниченного горизонта прогноза как
+в прошлое, так и в будущее, рост энтропии
+и необратимость процессов~\cite{chernavskii_syn_info,prigogine_from_existent,koltsova_nl_dyn_chem}.
+Это свойство делает неприменимыми
+большинство методов, разработанных для описания, управления и
+идентификации динамических систем. Также было замечено,
+что некоторые известные динамические системы, в том числе широко
+используемые в научной, производственной и технологической практике,
+зарекомендовавшие себя как системы регулярной динамики,
+при определённых условиях демонстрируют хаотическое поведение.
+Хаотически свойства проявляют системы как классической,
+так и квантовой механики.
+Новые свойства подобных систем требуют создания новых
+методов для решения задач моделирования, управления и идентификации.
 
-Где встречаются в реальном мире.
+\section{Свойства систем хаотической динамики применительно к задаче идентификации}  % {{{1
+
+Одним из основных свойств систем хаотической динамики является чувствительность
+к малым возмущениям сходных сигналов, состояния системы или же параметров.
+В линейном приближении это соответствует положительным значениям
+коэффициентов Ляпунова~\cite{magni_theory_dyn_chaos,moon_chaotic_vibr}.
+
+
+% }}}1
 
 \section{Основные понятия задачи идентификации динамических систем} % {{{1
 
@@ -19,20 +52,30 @@
 % }}}1
 
 
-\section{Свойства систем хаотической динамики применительно к задаче идентификации}  % {{{1
-
-Одним из основных свойств систем хаотической динамики является чувствительность
-к малым возмущениям сходных сигналов, состояния системы или же параметров.
-В линейном приближении это соответствует положительным значениям
-коэффициентов Ляпунова~\cite{magni_theory_dyn_chaos,moon_chaotic_vibr}.
-
-Чернавскиий~\cite{chernavskii_syn_info}.
-
-% }}}1
 
 \section{Существующие методы идентификации нелинейных динамических систем и их свойства}  % {{{1
 
+Основы идентификации систем управления~\cite{eykhoff_id_base,eykhoff_modern_id,gropp_methods_id,deith_method_id_ds,lung_id_sys,seidg_id_su,leondes_modern_tu,nelles_nlsys_id}
 
+Введение в идентификацию объектов управления~\cite{rastr_intro,rastr_adop_complex_sys}.
+
+Случайный поиск в задачах оптимизации многопараметрических систем~\cite{rastr_rand_search,rastr_rand_search_adopt}.
+
+Статистические методы поиска~\cite{rastr_stat_meth_search}
+
+Беспоисковые самонастраивающиеся системы~\cite{kozlov_nosearch_sns}
+
+Системы экстремального управления~\cite{rastr_seu,kras_dyn_nsn}
+
+Основы информационной теории идентификации~\cite{info_cipkin,straton_inf,karabut}
+
+Адаптация в непрерывных системах автоматического поиска~\cite{adopt_cont_sys}
+
+Карабутов~\cite{karabutov_adapt_id_sys,saliga_id_ctl_black}
+
+Автоматическая оптимизация в задачах пространственного распределения~\cite{auto_optim_intask}
+
+Адаптивно-поисковые методы и алгоритмы оптимизации и идентификации динамических систем~\cite{mich_92}
 
 % }}}1
 
