--- a/p5/fric_testsys.tex
+++ b/p5/fric_testsys.tex
@@ -17,7 +17,7 @@
 Одним из примеров таких систем является динамическая система (\ref{atu:eq:dryfric_sys}),
 моделирующая поведение тела заданной массы по действием внешней вынуждающей силы
 и силы сухого трения
-\cite{berger_friction,atu_asau11}:
+\cite{berger_friction,atu_asau11,osn_dyn_prom_robot,borcov}:
 %
 \begin{equation}
   m \ddot{x} + f_{df}( x, \dot{x}, \ldots)  = u(t).
