--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -17,7 +17,7 @@
 
 В качестве первой идентифицируемой хаотической системы рассмотрим классическую
 систему Лоренца, динамика которой описывается системой
-уравнений~\cite{moon_chaotic_vibr,anisch_nonlin_eff,chulichkcov_mm_ml_dyn}:
+уравнений~\cite{moon_chaotic_vibr,anisch_nonlin_eff,chulichkcov_mm_ml_dyn,berje_order_in_chaos}:
 %
 \begin{equation}
 \begin{cases}
