--- a/p5/vglass_testsys.tex
+++ b/p5/vglass_testsys.tex
@@ -15,7 +15,7 @@
 Особый интерес представляют системы, нелинейные компоненты которых
 отображают реальные элементы систем управления~\cite{atu_st85,atu_ISDMCI2013,atu_asau20}.
 Одним из таких существенно нелинейных элементов
-является гистерезис. % TODO: cite
+является гистерезис~\cite{sys_hyst,in_theory_mech_vibro,ivanov_alg_id_dyn_hyst,andronn_id_ns_hyst}.
 Рассмотрим изначально неустойчивую  систему,
 которая стабилизируется релейно-пропорциональным
 стабилизирующим воздействием.
