--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -51,9 +51,26 @@
 
 % }}}1
 
+Критерии
+
+% TODO: may be p1?
+При описании и анализе динамики хаотических
+систем используются специализированные характеристики и показатели.
+Например, сечение Пуанкаре~\cite{moon_chaotic_vibr,atu_st105}
+позволяет визуально определить признаки хаотической динамики.
+Однако, использование визуальных признаков в качестве критерия
+весьма затруднено.
+
+Другим важным признаком является фрактальная размерность. %TODO: cite
+В отличие от сечения Пуанкаре, она имеет скалярный вид,
+что делает возможным её использование в качестве критерия.
+Однако, диапазон изменения этой величины для большинства сигналов достаточно мал,
+и в условиях шумов измерения выделить полезную
+для идентификации составляющую весьма затруднительно.
 
 
 \section{Существующие методы идентификации нелинейных динамических систем и их свойства}  % {{{1
+
 
 Основы идентификации систем управления~\cite{eykhoff_id_base,eykhoff_modern_id,gropp_methods_id,deith_method_id_ds,lung_id_sys,seidg_id_su,leondes_modern_tu,nelles_nlsys_id}
 
