--- a/p5/chua_testsys.tex
+++ b/p5/chua_testsys.tex
@@ -159,7 +159,7 @@ $q_{*}(\mu) $ (индексом ``*'' будем обозначать приме
 
 Из графиков очевидно, что величина $ q_{V_1}(\mu) $
 является наилучшим кандидатом в критерии, ввиду близкой к линейной зависимости
-в рабочем диапазоне.
+в рабочем диапазоне~\cite{atu_apir2011}.
 
 Следующим важным параметром, необходимым для эффективной работы системы идентификации, является
 характерное время время оценивания $\tau$ (\ref{atu:eq:qlin}), или же обратная ему величина $a_q$.
@@ -226,7 +226,7 @@ $p_0 = 3.25$, $U_p=0.6$, $\omega_p=0.0104719755$.
 не наблюдается, так как реальные системы имеют ограниченные возможности
 по поддержанию отрицательного сопротивления. Для таких случаев
 представление диода Чуа в виде (\ref{atu:eq:diodchua})
-не является адекватным. Точнее, учитывая тот факт,
+не является адекватным~\cite{atu_kher2014}. Точнее, учитывая тот факт,
 что схемотехнические реализации появились после аналитичного представления,
 более правильным будет утверждение о том, что реализации недостаточно адекватно
 реализуют аналитическую зависимость для диода Чуа.
