--- a/p5/fric_testsys.tex
+++ b/p5/fric_testsys.tex
@@ -17,7 +17,7 @@
 Одним из примеров таких систем является динамическая система (\ref{atu:eq:dryfric_sys}),
 моделирующая поведение тела заданной массы по действием внешней вынуждающей силы
 и силы сухого трения
-\cite{berger_friction,atu_asau11,osn_dyn_prom_robot,borcov}:
+\cite{berger_friction,osn_dyn_prom_robot,borcov}:
 %
 \begin{equation}
   m \ddot{x} + f_{df}( x, \dot{x}, \ldots)  = u(t).
@@ -31,7 +31,7 @@ $u(t)$ -- вынуждающая сила,
 $ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 
 Важной особенностью при моделировании силы сухого трения является тот факт,
-что это силу невозможно корректно выразить аналитически. Более того,
+что это силу невозможно корректно выразить аналитически~\cite{atu_asau11}. Более того,
 её алгоритмическое представления неизбежно потребует учёта всех других сил,
 действующих на тело, то крайней мере, для корректного представления
 силы трения покоя. Эта особенность не даёт возможности
