--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -150,7 +150,7 @@ $x$. С другой стороны, так как параметр $r$ опре
 
 Также система (\ref{atu:eq:lor}) применима для
 моделирования конвекции жидкости в замкнутом подогреваемом петле,
-динамики водяного колеса, осцилляторе с трением и других~\cite{kuznetsov_dyn_chaos}.
+динамики водяного колеса, осцилляторе с трением и других~\cite{kuznetsov_dyn_chaos,atu_arsirii}.
 
 % }}}2
 
@@ -158,10 +158,10 @@ $x$. С другой стороны, так как параметр $r$ опре
 \subsection{Анализ и выбор критериев}  % {{{2
 
 Исходя из вышеизложенного, в первую очередь следует проверить применимость
-критерия вида $q_{x^2}$. Тем не менее, проверим все
+критерия вида $q_{x^2}$~\cite{atu_apir2012}. Тем не менее, проверим все
 критерии данного вида, применимые к данной системе.
 На рис.~\ref{atu:f:lor_q} приведены исследуемые зависимости
-$q_{*}(r)$, полученные путём моделирования динамики
+$q(r)$, полученные путём моделирования динамики
 системы (\ref{atu:eq:lor}) для различных значений параметра~$r$,
 при усреднении на значительном временном интервале $\tau_q=500$.
 
@@ -203,7 +203,7 @@ $q_{y^2}$.
 ошибкой измерения критерия.
 Для моделирования непосредственных погрешностей измерения величин
 $x(t)$ и $y(t)$ использовался шум с нормальным распределением
-и параметрами $\sigma_w=0.5$ и $\tau_w=0.05$.
+и параметрами $\sigma_w=0.5$ и $\tau_w=0.05$~\cite{atu_asau26}.
 Для оценивания требуемой зависимости, для каждого
 значения $\tau_q$ из заданного диапазона
 проводилось $N=200$ процессов моделирования динамики системы,
@@ -275,7 +275,7 @@ $ \frac{\sigma_q \tau_q}{q} \approx \mathrm{const}$.
 где:
 $p_0 = 37$, $U_p=12$, $\omega_p=0.09$.
 
-В качестве точки отсчёта рассмотрим применение уже рассмотрено в работе [atu-phd]
+В качестве точки отсчёта рассмотрим применение уже рассмотрено в работе \Cmt{[atu-phd]}
 метода с одним агентом, управляющим двумя моделями,
 и использующий два УГПК и интегратором для определения динамики агента.
 Для возможности применения данного метода к системе динамического хаоса
@@ -360,17 +360,18 @@ $\overline{e}_{rge}(\omega_p)$~(рис.~\ref{atu:f:lor_Fl2nlosdlcA_e_omega_p}).
 \end{figure}
 
 Так как основным недостатком рассмотренного метода является
-ограниченная реакция ка резкое изменение параметра,
+ограниченная реакция на резкое изменение параметра,
 то имеет смысл выдвинуть предположение,
 что использование в системе идентификации нескольких агентов,
 распределённых на пространстве параметров, может
 скомпенсировать данный недостаток.
 
 
-Для сравнения были выбраны три группы мультимодельных методов идентификации:
+Для сравнения были выбраны три группы мультимодельных методов идентификации~\cite{atu_ISDMCI2015,atu_asau26}:
 ql3ruonAAF.$q_{x^2}$,
 ql3ruonAAF.$q_{y^2}$ и
-Fq3zlovnAAF.$q_{x^2}$. Символы ``A'' в каждом из
+Fq3zlovnAAF.$q_{x^2}$.
+Символы ``A'' в каждом из
 обозначений~(см.~стр.~\pageref{atu:id_classification})
 индицируют, что проверяются
 % все
@@ -595,9 +596,9 @@ $\overline{e}_{rge}(\omega_p)$ (рис.~\ref{atu:f:lor_Fq3zlovnAAF_e_omega_p}).
 \subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Лоренца}  % {{{2
 
 Рассмотрим влияние параметров системы идентификации на
-процесс идентификации и, следовательно, на её качество.
+процесс идентификации и, следовательно, на её качество~\cite{atu_ISDMCI2014}.
 Для этого будем варьировать каждый из существенных
-параметров и строить зависимости $\overline{e}_{r*}$
+параметров и строить зависимости $\overline{e}$
 для каждого из рассмотренных методов.
 
 В первую очередь рассмотрим влияние параметра
