--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -78,7 +78,7 @@
 При увеличении значения параметра \(c\) происходит удвоение периода,
 поведение системы становится все более сложным, и в определенном
 диапазоне значений параметра система демонстрирует
-хаотическую динамику(рис.~\ref{atu:f:ross_attractor_0588}).
+хаотическую динамику~\cite{atu_st67} (рис.~\ref{atu:f:ross_attractor_0588}).
 
 \begin{figure}[ht!]
 \begin{center}
@@ -154,7 +154,8 @@
 Наблюдения за изменением формы аттрактора при увеличении параметра $c$
 позволяют заметить, что, в целом, максимальная аппликата также
 растёт. Это наблюдение позволяет добавить критерий $q_{z \max{}}$
-в число рассматриваемых. Зависимости рассматриваемых критериев от $c$
+в число рассматриваемых~\cite{atu_ISDMCI2012,atu_asau14}.
+Зависимости рассматриваемых критериев от $c$
 приведены на рис.~\ref{atu:f:ross_q}.
 
 
