--- a/p5/spr_a_testsys.tex
+++ b/p5/spr_a_testsys.tex
@@ -111,7 +111,7 @@
 Также следует отметить, что
 значения критериев, в которые не входит $x$, практически не зависят от $c_{x_y}$,
 а вид критериев $q_{xy}$ и $q_{xz}$ ничем не лучше, чем у $q_{x}$.
-Таким образом, систему идентификации будем строить, используя критерий~$q_{x^2}$.
+Таким образом, систему идентификации будем строить, используя критерий~$q_{x^2}$~\cite{atu_kher2016}.
 
 \begin{figure}[htb!]
 \centerline{
@@ -339,7 +339,7 @@ $a_q$, определяющий характерное время усредне
 На рис.~\ref{atu:f:spr_a_a_q_ql3rlWvnAAW_q_x2} представлены зависимости
 $\overline{e}(a_q)$ при применении метода ql3rlWvnAAW.$q_{x^2}$.
 Вид зависимостей аналогичен таковым, полученным для идентификации
-системы Лоренца, и определяется он теми же факторами,
+системы Лоренца~\cite{atu_kher2015}, и определяется он теми же факторами,
 то есть положение экстремума определяется балансом между
 динамическими свойствами самой системы и динамикой
 изменения параметра.
