--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -29,7 +29,7 @@
 \section{Выводы по разделу \thechapter}  % {{{1
 
 Результаты моделирования динамики рассмотренных тестовых систем,
-а также процессов идентификации их параметров,
+а также процессов идентификации их параметров~\cite{atu_colmono2016},
 позволяют сделать следующие выводы:
 
 \begin{itemize}
