--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -12,7 +12,8 @@
 Некоторые подсистемы электрических схем, хоть и не относятся непосредственно к
 релаксационными генераторами, проявляют схожую динамику.
 В первую очередь это импульсные системы питания, такие как
-современные блоки питания электронной техники, DC/DC преобразователи.
+современные блоки питания электронной техники, DC/DC преобразователи,
+системы позиционирования~\cite{atu_st104b}.
 
 Основными компонентами релаксационного генератора
 (рис.~\ref{atu:f:relax_types})
@@ -63,7 +64,7 @@ $R\Tidx{ch}$ и $R\Tidx{dis}$ соответственно,
 и разрядки $R\Tidx{dis}$.
 В данной работе, для лучшего проявления
 хаотических режимов,
-будем полагать, что времена зарядки и разрядки существенно отличаются.
+будем полагать, что времена зарядки и разрядки существенно отличаются~\cite{atu_asau19}.
 Не снижая общности, считаем, что $R\Tidx{ch} \gg R\Tidx{dis} $.
 При предварительном анализе можно считать $R\Tidx{dis} = 0$.
 Тем не менее, для обеспечения корректности численного моделирования,
@@ -380,7 +381,8 @@ $I_i(t)$ --- потребляемый им ток.
 Предлагаемый хаотический генератор представляет собой
 систему из трёх релаксационных генераторов,
 переключающий элемент в каждом из них реализован
-на паре комплиментарных транзисторов~(рис.~\ref{atu:f:relax3d_schem}).
+на паре комплиментарных транзисторов~\cite{atu_st107}
+(рис.~\ref{atu:f:relax3d_schem}).
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.96\textwidth]{p/relax3d_schem.png} }
