--- a/p5/vdp_testsys.tex
+++ b/p5/vdp_testsys.tex
@@ -15,7 +15,7 @@
 Модель нелинейной автоколебательной системы Ван-Дер-Поля~(\ref{atu:eq:vdp})
 широко используется при исследовании динамики
 колебательных систем, в которых происходит восполнение
-энергии системы из внешнего источника~\cite{anisch_nonlin_eff,magni_theory_dyn_chaos,atu_asau16,chulichkcov_mm_ml_dyn}:
+энергии системы из внешнего источника~\cite{anisch_nonlin_eff,magni_theory_dyn_chaos,atu_asau16,atu_st75,chulichkcov_mm_ml_dyn}:
 %
 \begin{equation}
  \ddot{x} - \varepsilon (1-x^2)  \dot{x} + \Omega_0^2 x  = u(t) .
@@ -44,7 +44,7 @@
 Под воздействием входного гармонического сигнала
 \( u(t) = U_{in} \sin ( \omega_{in} t ) \)
 система~(\ref{atu:eq:vdp}) может проявлять регулярную, сложно-периодическую
-и хаотическую динамику.
+и хаотическую динамику~\cite{atu_itcs2011,atu_ISDMCI2011}.
 
 Идентифицируемый параметр \( \varepsilon \)
 характеризует поступление энергии в систему.
